debug fix on cart template

--- a/geonode/cephgeo/templates/cart.html
+++ b/geonode/cephgeo/templates/cart.html
@@ -32,7 +32,7 @@
   {% if not cartsize %}
     <h2 class="page-title">{% trans "Cart" %}</h2>
   {% else %}
-    <h2 class="page-title">{% trans "Cart [{{ cartsize | filesizeformat }}]" %}</h2>
+    <h2 class="page-title">{% trans "Cart" %} [ {{ cartsize | filesizeformat }} ] </h2>
   {% endif %}
     
   </div>
