--- a/geonode/cephgeo/templates/cart.html
+++ b/geonode/cephgeo/templates/cart.html
@@ -43,20 +43,22 @@
 	  {% endfor %}
 	</ul>
   </div> 
-  <table border="3" style="width:100%">
-        <tr>
-            <th>Product</th>
-            <th>Size</th>
-            <th>Quantity</th>
+  <table border="3" style="width:100% ">
+        <tr >
+            <th style="text-align: center;">Tile Object</th>
+            <th style="text-align: center;">Size</th>
+            <th style="text-align: center;">Quantity</th>
+            <th style="text-align: center;"><i class="fa fa-minus-square"></i> {% trans "Remove" %} </th>
 <!--
             <th>Total Price</th>
 -->
         </tr>
         {% for item in cart %}
-        <tr>
+        <tr style="text-align: center;">
             <td>  {{ item.product.name }}</td>
             <td>  {{ item.product.size_in_bytes | filesizeformat }}</td>
             <td>  {{ item.quantity }}</td>
+            <td>  <input type="checkbox"/> </td>
 <!--
             <td>  {{ item.total_price }}</td>
 -->
