--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -351,13 +351,13 @@ Ext.onReady(function (){
                 filters:[
                     new OpenLayers.Filter.Comparison({
                         type: "==",
-                        property: "NAME_1",
-                        value: name[0]
+                        property: "NAME_2",
+                        value: name[1]
                     }),
                     new OpenLayers.Filter.Comparison({
                         type: "==",
-                        property:"NAME_2",
-                        value: name[1]
+                        property:"NAME_1",
+                        value: name[0]
                     })
                 ]
             });
@@ -365,6 +365,11 @@ Ext.onReady(function (){
                 filter: filter,
                 callback: function(response){
                     console.log(response.priv.responseText);
+                    if(response.priv.responseText){
+                        var json_parser = new OpenLayers.Format.JSON();
+                        var feature_out = json_parser.read(response.priv.responseText);
+                        console.log(feature_out);
+                    }
                 }
             });
     }
