--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -370,6 +370,9 @@ Ext.onReady(function (){
                         var GML_parser = new OpenLayers.Format.GML();
                         var feature_out = GML_parser.read(response.priv.responseText);
                         console.log(feature_out);
+                        for geom in feature_out.geometry.components{
+                            console.log("geometry bounds"+geom.getBounds());
+                        }
                     }
                 }
             });
