changed wfs response format for area of interest to GML, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -370,7 +370,7 @@ Ext.onReady(function (){
                         var GML_parser = new OpenLayers.Format.GML();
                         var feature_out = GML_parser.read(response.priv.responseText);
                         console.log(feature_out);
-                        for geom in feature_out.geometry.components{
+                        for var geom in feature_out.geometry.components{
                             console.log("geometry bounds"+geom.getBounds());
                         }
                     }
