--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -369,10 +369,10 @@ Ext.onReady(function (){
                     if(response.priv.responseText){
                         var GML_parser = new OpenLayers.Format.GML();
                         var feature_out = GML_parser.read(response.priv.responseText);
-                        var geometry = GML_parser.read(response.priv.responseText).geometry;
-                        for (var geom in feature_out.geometry.components){
-                            console.log("geometry bounds"+geom.getBounds());
+                        while(feature_out == undefined){
+                            console.log("still undefined")
                         }
+                        console.log(feature_out);
                     }
                 }
             });
