added a return-to-datastore button for navigation

--- a/geonode/cephgeo/templates/ftp_result.html
+++ b/geonode/cephgeo/templates/ftp_result.html
@@ -18,7 +18,9 @@
   </div>
   <br /><br /><br />
   <h4><b>Total Size: </b> {{ total_size | filesizeformat }}</h4>
-
+	<ul class="list-inline pull-right" id="sort">
+	  <li><a href="{% url 'ceph_main' %}"><button class="btn btn-default">{% trans "Return to Datastore Main Page" %}</button></a></li>
+	</ul>
     <table border="3" style="width:100%">
         <tr>
             <th>Filename</th>
