determining bounds from a multipolygon described from GML, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -372,8 +372,10 @@ Ext.onReady(function (){
                         var components = feature_out[0].geometry.components;
                         console.log(components);
                         for (var c in components){
-                            c.calculateBounds()
+                            c['calculateBounds'] = OpenLayers.Geometry.calculateBounds;
+                            c['getBounds'] = OpenLayers.Geometry.getBounds;
                             console.log(c.getBounds());
+                            
                         }
                         
                     }
