determining bounds from a multipolygon described from GML, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -374,7 +374,7 @@ Ext.onReady(function (){
                         for (var c in components){
                             c['calculateBounds'] = OpenLayers.Geometry.calculateBounds;
                             c['getBounds'] = OpenLayers.Geometry.getBounds;
-                            console.log(c.getBounds());
+                            console.log(c);
                             
                         }
                         
