determining bounds from a multipolygon described from GML, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -362,7 +362,7 @@ Ext.onReady(function (){
                 ]
             });
             
-           var interest_layer = new OpenLayers.Vector("Interest "+name, 
+           var interest_layer = new OpenLayers.Layer.Vector("Interest "+name, 
            {
                strategies: [new OpenLayers.Strategy.BBOX()],
                protocol: wfs_proto,
