determining bounds from a multipolygon described from GML, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -368,6 +368,8 @@ Ext.onReady(function (){
                protocol: wfs_proto,
                filter: filter
            });
+           
+           map.addLayers([interest_layer]);
            console.log(interest_layer);
            console.log(interest_layer.getDataExtent());
     }
