--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -364,9 +364,10 @@ Ext.onReady(function (){
             
            var interest_layer = new OpenLayers.Layer.Vector("Interest "+name, 
            {
-               strategies: [new OpenLayers.Strategy.BBOX()],
-               protocol: wfs_proto,
-               filter: filter
+               //strategies: [new OpenLayers.Strategy.BBOX()],
+               strategies: [new OpenLayers.Strategy.Filter({filter: filter})],
+               protocol: wfs_proto
+               //filter: filter
            });
            
            map.addLayers([interest_layer]);
