--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -365,7 +365,7 @@ Ext.onReady(function (){
            var interest_layer = new OpenLayers.Layer.Vector("Interest "+name, 
            {
                //strategies: [new OpenLayers.Strategy.BBOX()],
-               strategies: [new OpenLayers.Strategy.Filter({filter: filter})],
+               strategies: [new OpenLayers.Strategy.Filter({autoActivate: true, filter: filter})],
                protocol: wfs_proto
                //filter: filter
            });
