determining bounds from a multipolygon described from GML, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -331,6 +331,7 @@ Ext.onReady(function (){
     });
 
     var interest = "{{ interest }}";
+    var interest_layer;
     if (interest ){
              var wfs_proto = new OpenLayers.Protocol.WFS({
                 version: "1.0.0",
