--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -372,6 +372,7 @@ Ext.onReady(function (){
            });
            
            map.addLayers([interest_layer]);
+           console.log(interest_layer);
     }
     
 
