determining bounds from a multipolygon described from GML, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -363,7 +363,7 @@ Ext.onReady(function (){
                 ]
             });
             
-           var interest_layer = new OpenLayers.Layer.Vector("Interest "+name, 
+           interest_layer = new OpenLayers.Layer.Vector("Interest "+name, 
            {
                strategies: [new OpenLayers.Strategy.BBOX()],
                //strategies: [new OpenLayers.Strategy.Filter({autoActivate: true, filter: filter})],
