determining bounds from a multipolygon described from GML, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -375,7 +375,7 @@ Ext.onReady(function (){
            console.log(interest_layer);
     }
     
-    console.log(interest_layer.features);
+    console.log(interest_layer.features[0]);
     
     click_select = new OpenLayers.Control.Click()
     map.addControl(click_select);
