determining bounds from a multipolygon described from GML, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -375,8 +375,6 @@ Ext.onReady(function (){
            console.log(interest_layer);
     }
     
-    console.log(interest_layer.features[0]);
-    
     click_select = new OpenLayers.Control.Click()
     map.addControl(click_select);
     click_select.activate();
@@ -389,7 +387,7 @@ Ext.onReady(function (){
     app = new GeoExt.MapPanel(config);
     
     if(interest){
-        map.zoomToExtent(interest_layer.features[0].geometry.bounds);
+        map.zoomToExtent(interest_layer.features.geometry.bounds);
     }else{
         map.zoomToExtent(tile_layer.maxExtent, false);
     }
