--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -385,6 +385,7 @@ Ext.onReady(function (){
     
     app = new GeoExt.MapPanel(config);
     var features = interest_layer.unrenderedFeatures;
+    console.log(interest_layer);
     console.log(features);
     if(interest){
         map.zoomToExtent(interest_layer.features.geometry.bounds, false);
