--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -363,15 +363,7 @@ Ext.onReady(function (){
                 ]
             });
             
-           interest_layer = new OpenLayers.Layer.Vector("Interest "+name, 
-           {
-               strategies: [new OpenLayers.Strategy.BBOX()],
-               //strategies: [new OpenLayers.Strategy.Filter({autoActivate: true, filter: filter})],
-               protocol: wfs_proto,
-               filter: filter
-           });
-           
-           map.addLayers([interest_layer]);
+            var wfs_resp = 
     }
     
     click_select = new OpenLayers.Control.Click()
@@ -382,16 +374,8 @@ Ext.onReady(function (){
     //map.addControl(drawCtrl);
     //drawCtrl.activate();
 
+    map.zoomToExtent(tile_layer.maxExtent, false);
     
-    app = new GeoExt.MapPanel(config);
-    //var features = interest_layer.unrenderedFeatures;
-    //console.log(interest_layer);
-    //console.log(features);
-    if(interest){
-        map.zoomToExtent(interest_layer.features[0].geometry.bounds, false);
-    }else{
-        map.zoomToExtent(tile_layer.maxExtent, false);
-    }
     
     
 });
