--- a/geonode/cephgeo/templates/file_list_geonode.html
+++ b/geonode/cephgeo/templates/file_list_geonode.html
@@ -36,7 +36,31 @@
   </ul>  
   </div>
   <br /><br /><br />
-  
+    <table id="cart_table" border="3" style="width:100% ">
+        <tr >
+            <th style="text-align: center;">{% trans "File Name" %}</th>
+            <th style="text-align: center;">{% trans "Grid Reference" %}</th>
+            <th style="text-align: center;">{% trans "File Hash" %}</th>
+            <th style="text-align: center;">{% trans "Data Class" %}</th>
+            <th style="text-align: center;">{% trans "Last Modified" %}</th>
+            <th style="text-align: center;">{% trans "File Size" %}</th>
+    <!--
+            <th>Total Price</th>
+    -->
+        </tr>
+        {% for file in file_list %}
+		<tr id="{{ item.product.name }}" name="{{ item.product.name }}" style="text-align: center;">
+            <td>{{ file.name }}</td>
+            <td><a href="{% url 'cephgeo.views.file_list_geonode' 'default' file.grid_ref %}">{{ file.grid_ref }}</a></td>
+			<td>{{ file.file_hash }}</td>
+			<td>{{ file.data_class | get_data_class_label}}</td>
+			<td>{{ file.last_modified }}</td>
+			<td>{{ file.size_in_bytes | filesizeformat  }}</td>
+        </tr>
+        {% endfor %}
+
+    </table>
+<!--
   <ul>
 	{% for file in file_list %}
 		<li><h4>
@@ -50,6 +74,7 @@
 		</li>
 	{% endfor %}
   </ul>
+-->
   
   <div class="pagination">
 	<span class="step-links">
