--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -48,7 +48,6 @@ OpenLayers.ProxyHost = "http://192.168.56.100:8000/proxy/?url=";
 
 var options = {{ viewer| safe }};
 var app;
-var bounds_list = [];
 var tile_list = [];
 var curr_popup;
 // added stuff
@@ -333,37 +332,46 @@ Ext.onReady(function (){
     var interest = "{{ interest }}";
     var interest_layer;
     if (interest ){
-             var wfs_proto = new OpenLayers.Protocol.WFS({
-                version: "1.0.0",
-                url: "http://192.168.56.100:8080/geoserver/geonode/wfs",
-                featurePrefix: "geonode",
-                featureType: "phl_adm2_municipalities_utm_z51n",
-                featureNS: "http://www.geonode.org/",
-                srsName: "EPSG:32651",
-                //outputFormat: "GML"
-            });              
-            
-            // assuming that interest is of the form "<province>,<municipality/city>"
-            // split the interest string here
-            var name = interest.split(",");
-            
-            var filter = new OpenLayers.Filter.Logical({
-                type: "&&",
-                filters:[
-                    new OpenLayers.Filter.Comparison({
-                        type: "==",
-                        property: "NAME_2",
-                        value: name[1]
-                    }),
-                    new OpenLayers.Filter.Comparison({
-                        type: "==",
-                        property:"NAME_1",
-                        value: name[0]
-                    })
-                ]
-            });
-            
-            var wfs_resp = 
+        var wfs_proto = new OpenLayers.Protocol.WFS({
+            version: "1.0.0",
+            url: "http://192.168.56.100:8080/geoserver/geonode/wfs",
+            featurePrefix: "geonode",
+            featureType: "phl_adm2_municipalities_utm_z51n",
+            featureNS: "http://www.geonode.org/",
+            srsName: "EPSG:32651",
+            outputFormat: "application/json"
+        });              
+        
+        // assuming that interest is of the form "<province>,<municipality/city>"
+        // split the interest string here
+        var name = interest.split(",");
+        
+        var filter = new OpenLayers.Filter.Logical({
+            type: "&&",
+            filters:[
+                new OpenLayers.Filter.Comparison({
+                    type: "==",
+                    property: "NAME_2",
+                    value: name[1]
+                }),
+                new OpenLayers.Filter.Comparison({
+                    type: "==",
+                    property:"NAME_1",
+                    value: name[0]
+                })
+            ]
+        });
+        
+        var wfs_resp =  = wfs_proto.read({
+            filter: filter,
+            callback: function(response){
+                if(response.priv.responseText){
+                    var json_parser = new OpenLayers.Format.GeoJSON();
+                    var feature_out = json_parser.read(response.priv.responseText);
+                    console.log(feature_out);
+                    
+            }
+        });
     }
     
     click_select = new OpenLayers.Control.Click()
