determining bounds from a multipolygon described from GML, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -362,7 +362,7 @@ Ext.onReady(function (){
             ]
         });
         
-        var wfs_resp =  = wfs_proto.read({
+        var wfs_resp  = wfs_proto.read({
             filter: filter,
             callback: function(response){
                 if(response.priv.responseText){
