--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -369,6 +369,7 @@ Ext.onReady(function (){
                     var json_parser = new OpenLayers.Format.GeoJSON();
                     var feature_out = json_parser.read(response.priv.responseText);
                     console.log(feature_out);
+                    feature_out[0].geometry.calculateBounds();
                     console.log(feature_out[0].geometry);
                 }
             }
