determining bounds from a multipolygon described from GeoJSON, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -371,6 +371,7 @@ Ext.onReady(function (){
                     console.log(feature_out);
                     feature_out[0].geometry.calculateBounds();
                     console.log(feature_out[0].geometry);
+                    console.log(feature_out[0].geometry.getBounds());
                 }
             }
         });
