--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -381,7 +381,7 @@ Ext.onReady(function (){
             }
         });
         
-        map.zoomToExtent(interest_bounds, false);
+        map.zoomToExtent(interest_bounds.transform(new OpenLayers.Projection("EPSG:32651"), new OpenLayers.Projection("EPSG:900913")), false);
         
     }else{
         map.zoomToExtent(tile_layer.maxExtent, false);
