determining bounds from a multipolygon described from GeoJSON, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -381,6 +381,8 @@ Ext.onReady(function (){
             }
         });
         
+        while(interest_bounds==undefined){}
+        
         map.zoomToExtent(interest_bounds.transform(new OpenLayers.Projection("EPSG:32651"), new OpenLayers.Projection("EPSG:900913")), false);
         
     }else{
